--- a/TheBindingOfAlba/TheBindingOfAlba.vcxproj
+++ b/TheBindingOfAlba/TheBindingOfAlba.vcxproj
@@ -34,6 +34,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ProjectileEnemy.cpp" />
+    <ClCompile Include="Rock.cpp" />
     <ClCompile Include="Space.cpp" />
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -53,6 +54,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="ProjectileEnemy.h" />
+    <ClInclude Include="Rock.h" />
     <ClInclude Include="Space.h" />
     <ClInclude Include="Text.h" />
     <ClInclude Include="Tile.h" />
