Las rocas se rompen

--- a/TheBindingOfAlba/TheBindingOfAlba.vcxproj
+++ b/TheBindingOfAlba/TheBindingOfAlba.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemyChase.cpp" />
     <ClCompile Include="EnemyShooter.cpp" />
+    <ClCompile Include="Explosion.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameLayer.cpp" />
     <ClCompile Include="Layer.cpp" />
@@ -50,6 +51,7 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnemyChase.h" />
     <ClInclude Include="EnemyShooter.h" />
+    <ClInclude Include="Explosion.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameLayer.h" />
     <ClInclude Include="Layer.h" />
