--- a/TheBindingOfAlba/TheBindingOfAlba.vcxproj.filters
+++ b/TheBindingOfAlba/TheBindingOfAlba.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="Layer.cpp">
       <Filter>Archivos de origen\Layers</Filter>
     </ClCompile>
+    <ClCompile Include="Heart.cpp">
+      <Filter>Archivos de origen\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -175,6 +178,9 @@
     </ClInclude>
     <ClInclude Include="Layer.h">
       <Filter>Archivos de encabezado\Layers</Filter>
+    </ClInclude>
+    <ClInclude Include="Heart.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
