--- a/TheBindingOfAlba/TheBindingOfAlba.vcxproj
+++ b/TheBindingOfAlba/TheBindingOfAlba.vcxproj
@@ -38,6 +38,8 @@
     <ClCompile Include="KeyRock.cpp" />
     <ClCompile Include="Layer.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MenuLayer.cpp" />
+    <ClCompile Include="Pad.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ProjectileEnemy.cpp" />
@@ -65,6 +67,8 @@
     <ClInclude Include="Key.h" />
     <ClInclude Include="KeyRock.h" />
     <ClInclude Include="Layer.h" />
+    <ClInclude Include="MenuLayer.h" />
+    <ClInclude Include="Pad.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="ProjectileEnemy.h" />
